# costo-economico-salud-mental-global-latam-2020-2024

./: .zenodo.json  EXAMPLE_NOTEBOOK.ipynb  HUGGINGFACE_CARD.md  README.md  codemeta.json  kaggle-metadata.json  pyproject.toml  setup.py
costo_economico_salud_men/: __init__.py
costo_economico_salud_mental/: __init__.py  cargador.py
notebooks/: costo_economico_salud_mental_analisis.ipynb
